# teach_and_repeat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  package.xml  readme.md  requirements.txt
data/: path_coords.txt
fixed_paths/: path_freedom_a.txt  path_freedom_b.txt  path_vini_gabs.txt  teleop_data copy.txt  warehouse_c.txt
launch/: base.launch.py  mapping.launch.py  mapping_hokuyo.launch.py  navigation.launch.py  repeat_path.launch.py  robot_localization.launch.py  teach_path_coords.launch.py
map/: map.pgm  map.yaml
nodes/: plot_bezier.py  repeat_bezier_path.py  repeat_bezier_path_odom.py  repeat_path_coords.py  teach_path_coords.py  teach_path_coords_odom.py  view_path_coords.py
path_saves/: path_coords.txt
paths/: corredor_c3.txt  eight_path.txt  ilha_path_1.txt  ilha_path_2.txt  ilha_path_2_p.txt  path_circular.txt  path_corredor.txt  warehouse_d.txt
rviz/: mapping.rviz  robot.rviz  teach.rviz
scripts/: calculate_distance.py  calculate_erro.py  compare_bezier_lookahead.py  compare_paths.py  compare_paths_manual.py  compare_paths_old.py  compare_paths_two.py  compress_data.py  copy_file.py  create_folder_with_datetime.py  generate_bezier_curve.py  generate_lookahead.py  get_jacobian.py  plot_bezier.py  plot_bezier_point.py  points_at_interval.py  read_coords_from_file.py  read_coords_from_file_two.py  save_coords_to_file.py  save_variables_to_file.py
